[project]
name = "vlm-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "blinker>=1.9.0",
    "dotenv>=0.9.9",
    "keyboard>=0.13.5",
    "looptick==0.1.2",
    "openai>=1.107.1",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "pip>=25.2",
    "pyee>=13.0.0",
    "rich>=14.1.0",
    "tiktoken>=0.12.0",
    "zai-sdk>=0.0.3.5",
]
